[workspace]
members = ["."]

[package]
name = "bevy_save"
version = "0.16.0"
edition = "2021"
description = "A framework for saving and loading application state in Bevy."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hankjordan/bevy_save"
rust-version = "1.82.0"

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

[features]
default = ["bevy_asset", "bevy_render", "bevy_sprite"]
bevy_asset = ["bevy/bevy_asset"]
bevy_render = ["bevy/bevy_render"]
bevy_sprite = ["bevy/bevy_sprite"]
brotli = ["dep:brotli"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_scene"] }
rmp-serde = "1.3"
serde_json = "1.0"
serde = "1.0"
platform-dirs = "0.3"
thiserror = "2.0"
async-std = "1.13"
brotli = { version = "7.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.15", default-features = false }
web-sys = { version = "0.3", default-features = false, features = [
    "Storage",
    "Window",
] }
wasm-bindgen = { version = "0.2", default-features = false }
fragile = "2.0"
uuid = { version = "1.16", features = ["js"] }

[dev-dependencies]
bevy = { version = "0.15" }
bevy-inspector-egui = "0.30.0"
ron = "0.9"
io-adapters = "0.4"
