[workspace]
members = [".", "crates/*"]

[workspace.package]
version = "0.19.2"
edition = "2024"
description = "A framework for saving and loading application state in Bevy."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hankjordan/bevy_save"
rust-version = "1.85.0"

[package]
name = "bevy_save"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

[features]
default = ["reflect", "checkpoints", "bevy_asset", "bevy_render", "bevy_sprite"]
reflect = ["bevy/bevy_scene"]
checkpoints = ["reflect"]
bevy_asset = ["bevy/bevy_asset"]
bevy_render = ["bevy/bevy_render"]
bevy_sprite = ["bevy/bevy_sprite"]
brotli = ["dep:brotli"]

[workspace.dependencies]
bevy = { version = "0.16.1", default-features = false }
bevy_macro_utils = "0.16.1"
bevy_save_macros = { version = "0.19.0", path = "crates/bevy_save_macros" }
variadics_please = { version = "1.1" }

[dependencies]
bevy.workspace = true
bevy_save_macros.workspace = true
variadics_please.workspace = true
rmp-serde = "1.3"
serde_json = "1.0"
serde = "1.0"
platform-dirs = "0.3"
thiserror = "2.0"
async-std = "1.13"
semver = "1.0"
brotli = { version = "8.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.16.1", default-features = false }
web-sys = { version = "0.3", default-features = false, features = [
    "Storage",
    "Window",
] }
wasm-bindgen = { version = "0.2", default-features = false }
fragile = "2.0"
uuid = { version = "1.16", features = ["js"] }

[dev-dependencies]
bevy = { workspace = true, default-features = true, features = ["serialize"] }
bevy-inspector-egui = "0.31.0"
bevy_egui = "0.35"
ron = "0.10"
postcard = { version = "1.1", features = ["use-std"] }
io-adapters = "0.4"
